Added Sanity Output

--- a/responsiveLogin.html
+++ b/responsiveLogin.html
@@ -26,13 +26,13 @@
 					</form>
 				</div>
 			</div>
-		<!--<p>{{username}}</p>
+		<p>{{username}}</p>
 			<p>{{password}}</p>
 			<ul>
 				<li ng-repeat="x in names">
 					{{x.Login}}
 				</li>
-			</ul>-->
+			</ul>
 		</div>
 		<!--<img id="sogeti-spade" src="http://s22.postimg.org/k97y0tj71/spade_bigger.jpg">-->
 		<script>
