--- a/weatherCode.html
+++ b/weatherCode.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Weather Code</title>
 		<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 		<style>
 		li.L0, li.L1, li.L2, li.L3,
