--- a/parallaxTest.html
+++ b/parallaxTest.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Parallax Test</title>
+	<title>Parallax Page Test</title>
 	<link rel='stylesheet' href='dependencies/parallaxStyle.css?1.9'/>
 	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 </head>
