--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Weather Page</title>
+		<title>5 Day Forecast Page</title>
 		<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 	</head>
 	<body style='background-color: #184D72'>
